[gd_scene load_steps=50 format=2]

[ext_resource path="res://KerromancerPlayer/Weapons/WeaponManager.gd" type="Script" id=1]
[ext_resource path="res://KerromancerPlayer/Crush.gd" type="Script" id=2]
[ext_resource path="res://SpriteSheets/Kerromancer/Kerromancer-Walk-Sheet.png" type="Texture" id=3]
[ext_resource path="res://SpriteSheets/Kerromancer/Kerromancer-Idle-Sheet.png" type="Texture" id=4]
[ext_resource path="res://SpriteSheets/Kerromancer/Kerromancer-Jump-Sheet.png" type="Texture" id=5]
[ext_resource path="res://KerromancerPlayer/StateMachine/KMJump.gd" type="Script" id=6]
[ext_resource path="res://KerromancerPlayer/StateMachine/KMFalling.gd" type="Script" id=7]
[ext_resource path="res://KerromancerPlayer/StateMachine/KMIdle.gd" type="Script" id=8]
[ext_resource path="res://KerromancerPlayer/StateMachine/KMWalk.gd" type="Script" id=9]
[ext_resource path="res://KerromancerPlayer/StateMachine/KMStateMachine.gd" type="Script" id=10]
[ext_resource path="res://KerromancerPlayer/Kerromancer.gd" type="Script" id=11]
[ext_resource path="res://SpriteSheets/Kerromancer/Kerromancer-Falling-Sheet.png" type="Texture" id=12]
[ext_resource path="res://icon.png" type="Texture" id=13]
[ext_resource path="res://KerromancerPlayer/Magic/MagicManager.gd" type="Script" id=14]
[ext_resource path="res://KerromancerPlayer/StateMachine/Tailwind Lunge.gd" type="Script" id=15]
[ext_resource path="res://KerromancerPlayer/StateMachine/KMKnockback.gd" type="Script" id=16]
[ext_resource path="res://KerromancerPlayer/Interaction.gd" type="Script" id=17]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 12 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "Walk",
"speed": 13.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Falling",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 18.9855, 48.3882 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 8.35428, 20.2173 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 10.8958, 21.176 )

[sub_resource type="CircleShape2D" id=30]
radius = 16.0

[sub_resource type="CircleShape2D" id=31]
radius = 16.0

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 21.0051, 13.75 )

[node name="Kerromancer" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2147483649
collision_mask = 2147483649
script = ExtResource( 11 )

[node name="PlayerParticles" type="CPUParticles2D" parent="."]
amount = 10
lifetime = 0.2
local_coords = false
texture = ExtResource( 13 )
gravity = Vector2( 0, 0 )

[node name="Graphic" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 26 )
animation = "Idle"
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 27 )

[node name="Crush" type="Node2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="Left" type="Area2D" parent="Crush"]
collision_layer = 2147483658
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crush/Left"]
modulate = Color( 0.521569, 1, 0, 1 )
position = Vector2( -6.31236, 17.4224 )
shape = SubResource( 28 )

[node name="Right" type="Area2D" parent="Crush"]
collision_layer = 10
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crush/Right"]
modulate = Color( 0, 1, 0.25098, 1 )
position = Vector2( 6.21417, 17.7858 )
shape = SubResource( 29 )

[node name="Top" type="Area2D" parent="Crush"]
collision_layer = 10
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crush/Top"]
modulate = Color( 0.0313726, 1, 0, 1 )
position = Vector2( 0.198425, -15.0079 )
shape = SubResource( 30 )

[node name="Bottom" type="Area2D" parent="Crush"]
collision_layer = 10
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crush/Bottom"]
modulate = Color( 0, 1, 0.0627451, 1 )
position = Vector2( 0.595276, 46.0158 )
shape = SubResource( 31 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0.667419, -58.0429 )
current = true
zoom = Vector2( 0.85, 0.85 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="Interaction" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
script = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, 48 )
shape = SubResource( 32 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Falling" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Knockback" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="Timer" type="Timer" parent="StateMachine/Knockback"]
wait_time = 3.0

[node name="Tailwind Lunge" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Timer" type="Timer" parent="StateMachine/Tailwind Lunge"]
one_shot = true

[node name="Debug" type="Label" parent="."]
visible = false
margin_left = 12.5992
margin_top = -52.9167
margin_right = 52.5992
margin_bottom = -38.9167
text = "State"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponManager" type="Node2D" parent="."]
position = Vector2( 2.22725, -2.22725 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="MagicManager" type="Node2D" parent="."]
script = ExtResource( 14 )
[connection signal="body_entered" from="Crush/Left" to="Crush" method="_on_Left_body_entered"]
[connection signal="body_exited" from="Crush/Left" to="Crush" method="_on_Left_body_exited"]
[connection signal="body_entered" from="Crush/Right" to="Crush" method="_on_Right_body_entered"]
[connection signal="body_exited" from="Crush/Right" to="Crush" method="_on_Right_body_exited"]
[connection signal="body_entered" from="Crush/Top" to="Crush" method="_on_Top_body_entered"]
[connection signal="body_exited" from="Crush/Top" to="Crush" method="_on_Top_body_exited"]
[connection signal="body_entered" from="Crush/Bottom" to="Crush" method="_on_Bottom_body_entered"]
[connection signal="body_exited" from="Crush/Bottom" to="Crush" method="_on_Bottom_body_exited"]
[connection signal="area_entered" from="Interaction" to="Interaction" method="_on_Interaction_area_entered"]
[connection signal="area_exited" from="Interaction" to="Interaction" method="_on_Interaction_area_exited"]
[connection signal="timeout" from="StateMachine/Knockback/Timer" to="StateMachine" method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/Tailwind Lunge/Timer" to="StateMachine/Tailwind Lunge" method="_on_Timer_timeout"]
